--- a/CMfunctor.tex
+++ b/CMfunctor.tex
@@ -280,9 +280,8 @@ $$
 $$
 of sheaves
 (see Lemma \ref{lemma-coherent-stack},
-Algebraic Stacks, Section \ref{algebraic-section-split}, and
-Examples of Stacks, Section
-\ref{examples-stacks-section-stack-associated-to-sheaf}).
+\cite[Tag 04SU]{stacks-project}, and
+\cite[Tag 0305]{stacks-project}.
 Let $B' \to B$ be a morphism of
 algebraic spaces over $S$.
 Set $X' = X \times_B B'$.
@@ -346,8 +345,8 @@ will occasionally be useful to change the base algebraic space.
 	For property (4), simply pull back the open set in $C_0$ to $C$.
 	This demonstrates that $\Delta$ is representable.
 
-	Now, we note that $U\rightarrow T$ is quasicompact as it is the pullback of the diagonal of $\text{B-curves}$ to $T$ (Lemma Tag 0DSQ).
-	Next, $V\rightarrow U$ is quasicompact as it is the pullback of the diagonal of $Mor(C,X)$ to $U$ (Lemma Tag 0DPM).
+	Now, we note that $U\rightarrow T$ is quasicompact as it is the pullback of the diagonal of $\text{B-curves}$ to $T$ (\cite[Tag 0DSQ]{stacks-project}).
+	Next, $V\rightarrow U$ is quasicompact as it is the pullback of the diagonal of $Mor(C,X)$ to $U$ (Lemma \cite[Tag 0DPM]{stacks-project}).
 	Thus, $V\rightarrow T$ is quasicompact.
 \end{proof}
 \begin{lemma}\label{cm-fibered-in-setoids}
@@ -366,12 +365,12 @@ C_2 \ar[r]^{g_2} & X
 } \]
 Let $U \subset X_T$ be an open subset satisfying condition~(\ref{situation-cm-open}) from Situation~\ref{situation-cm} for $\gamma_2$.
 Let $U' = (g'_2)^{-1}(U)$ and $V' = \bar{a}^{-1}(U') \cap \bar{b}^{-1}(U') \subset C_1$.
-Then $g'_2|_{U'}$ is a closed immersion of algebraic spaces, hence a monomorphism (Lemma~Tag 042R).
+Then $g'_2|_{U'}$ is a closed immersion of algebraic spaces, hence a monomorphism (\cite[Tag 042R]{stacks-project}).
 As $g'_2|_{U'} \circ \bar{a}|_{V'} = g'_2|_{U'} \circ \bar{b}|_{V'}$, we have $\bar{a}|_{V'} = \bar{b}|_{V'}$.
 
 On the other hand, $U' \subset C_2$ is scheme theoretically dense.
-Since $\bar{a}$ and $\bar{b}$ are isomorphisms, $\bar{a}^{-1}(U') \cap \bar{b}^{-1}(U') \subset C_1$ is scheme theoretically dense by Lemma~Tag 0837.
-Lemma~Tag 084N shows that $\bar{a} = \bar{b}$, and thus $a = b$.
+Since $\bar{a}$ and $\bar{b}$ are isomorphisms, $\bar{a}^{-1}(U') \cap \bar{b}^{-1}(U') \subset C_1$ is scheme theoretically dense by \cite[Tag 0837]{stacks-project}.
+\cite[Tag 084N]{stacks-project} shows that $\bar{a} = \bar{b}$, and thus $a = b$.
 \end{proof}
 
 \begin{lemma}
@@ -387,7 +386,7 @@ We must prove that
   \CMfunctor_{X/B}(T) \ar[r] & \prod\nolimits_{i\in I} \CMfunctor_{X/B}(T_i) \ar@<1ex>[r]^-{\text{pr}_0^*} \ar@<-1ex>[r]_-{\text{pr}_1^*} & \prod\nolimits_{(i_0, i_1) \in I \times I} \CMfunctor_{X/B}(T_{i_0} \times_T T_{i_1})
 } \]
 is an equalizer diagram.
-Injectivity is immediate from descent for algebraic spaces, see Lemma~Tag 0ADT, and because $X$ and $B$ are, per definition, sheaves for the fppf topology.
+Injectivity is immediate from descent for algebraic spaces, see \cite[Tag 0ADT]{stacks-project}, and because $X$ and $B$ are, per definition, sheaves for the fppf topology.
 
 Let us proceed to exactness in the middle.
 Suppose we are given $\gamma_i = (h_i,C_i \to T,g_i) \in \CMfunctor_{X/B}(T_i)$ such that 
@@ -395,17 +394,17 @@ Suppose we are given $\gamma_i = (h_i,C_i \to T,g_i) \in \CMfunctor_{X/B}(T_i)$ 
 for all $i,j \in I$.
 In particular, there exist isomorphisms $\varphi_{ij} \colon C_i \times_T T_j \xrightarrow{\sim} T_i \times_T C_j$ such that $g_j|_{T_i \times_T T_j} \circ \varphi_{ij} = g_i|_{T_i \times_T T_j}$.
 By Lemma~\ref{cm-fibered-in-setoids}, $(C_i,\varphi_{ij})$ forms a descent datum for algebraic spaces relative to $\{T_i \to T\}$.
-As fppf descent data for algebraic spaces of finite type are effective, Lemma~Tag 04TR and Lemma~Tag 04U0, there is an algebraic space $C \to T$ such that $C \times_T T_i = C_i$; see also the proof of condition (3) in Lemma~Tag 0D1G.
+As fppf descent data for algebraic spaces of finite type are effective, \cite[Tag 04TR]{stacks-project} and \cite[Tag 04U0]{stacks-project}, there is an algebraic space $C \to T$ such that $C \times_T T_i = C_i$; see also the proof of condition (3) in \cite[Tag 0D1G]{stacks-project}.
 Further, since algebraic spaces are sheaves in the fppf topology, the morphisms $g_i \colon C_i \to X$ and $h_i \colon T_i \to B$ glue to morphisms $g \colon C \to X$ and $h \colon T \to B$, respectively.
 
 Set $\gamma = (h,C\to T,g)$.
 It remains to show that $\gamma \in \CMfunctor_{X/B}(T)$.
 Property~(\ref{situation-cm-diagram}) holds because commutativity of the diagram can be checked fppf locally on $C$.
 
-The morphism $C \to T$ is of relative dimension $1$, flat, proper, and of finite presentation by Lemma~Tag 02VJ, Lemma~Tag 02L2, Lemma~Tag 02L1, and Lemma~Tag 02L0.
-Moreover, for a flat morphism, being Cohen-Macaulay can be checked on fibers, see Lemma~Tag 0E0W. That establishes property~(\ref{situation-cm-morphism}).
+The morphism $C \to T$ is of relative dimension $1$, flat, proper, and of finite presentation by \cite[Tag 02VJ]{stacks-project}, \cite[Tag 02L2]{stacks-project}, \cite[Tag 02L1]{stacks-project}, and \cite[Tag 02L0]{stacks-project}.
+Moreover, for a flat morphism, being Cohen-Macaulay can be checked on fibers, see \cite[Tag 0E0W]{stacks-project}. That establishes property~(\ref{situation-cm-morphism}).
 
-For property~(\ref{situation-cm-finite}), the finiteness of $(g') \colon C \to X_T$ can again be seen fppf locally on $X_T$ from the finiteness of the $(g')|_{T_i} = (g'_i) \colon C_i \to X_{T_i}$ by Lemma~Tag 02LA.
+For property~(\ref{situation-cm-finite}), the finiteness of $(g') \colon C \to X_T$ can again be seen fppf locally on $X_T$ from the finiteness of the $(g')|_{T_i} = (g'_i) \colon C_i \to X_{T_i}$ by \cite[Tag 02LA]{stacks-project}.
 
 Finally, let $U = X_T \setminus (\text{Supp}\Coker(\mathcal{O}_{X_T} \to (g')_*\mathcal{O}_C))$.
 This is the largest open subset for which $(g')^{-1}(U) \to U$ is an closed immersion.
@@ -456,7 +455,6 @@ Then $((g')^{-1}(U))_t = ((g'_i)^{-1}(U))_{\tilde{t}}$ is dense in $C_t = (C_{i}
 		Strictly speaking, in the proof of Lemma \ref{lemma-cm-tangent-space}, we describe a vector space which merely contains $T_{k,x_0}\CMfunctor_{X/S}$--we have ignored data like the generic embedding condition.
 		This is adequate however, because our goal is merely to demonstrate that the actual tangent space is finite-dimensional.
 	\end{remark}
-\\
 
 \begin{lemma}
 	\label{lemma-cm-existence}
@@ -553,12 +551,12 @@ In other words, we may assume $B$ is a scheme.
 
 \medskip\noindent
 Assume $B$ is a scheme. In this case we may replace $S$ by $B$, see
-Algebraic Spaces, Section Tag 03I3.
+\cite[Tag 03I3]{stacks-project}.
 Thus we may assume $S = B$.
 
 \medskip\noindent
 Assume $S = B$.
-By Bootstrap, Lemma Tag 04SK, we may assume that $B$ is affine.
+By Bootstrap, \cite[Tag 04SK]{stacks-project}, we may assume that $B$ is affine.
 
 \medskip\noindent
 Assume $S = B$ is affine, say $S = \Spec(\Lambda)$.
@@ -567,18 +565,18 @@ of finite type over $\mathbf{Z}$. For some $i$ we can find
 a morphism of algebraic spaces $X_i \to \Spec(\Lambda_i)$
 which is separated and of finite presentation and whose base change
 to $\Lambda$ is $X$. See Limits of Spaces, Lemmas
-\ref{spaces-limits-lemma-descend-finite-presentation} and
+\cite[Tag 07SK]{stacks-project} and
 \ref{spaces-limits-lemma-descend-separated-morphism}.
 If we show that $\CMfunctor_{X_i/\Spec(\Lambda_i)}$ is an
 algebraic space, then it follows by base change
-(Remark \ref{remark-cm-base-change} and Section Tag 03I3)
+(Remark \ref{remark-cm-base-change} and \cite[Tag 03I3]{stacks-project})
 that $\mathcal{X}$ is an algebraic space.
 Thus we may assume that $\Lambda$ is a finite type $\mathbf{Z}$-algebra.
 
 \medskip\noindent
 Assume $S = B = \Spec(\Lambda)$ is affine of finite type over $\mathbf{Z}$.
 In this case we will verify conditions (1), (2), and (3) of 
-Proposition Tag 07Y1
+\cite[Tag 07Y1]{stacks-project}
 to conclude that $\mathcal{X}$ is an algebraic space.
 
 \medskip\noindent
@@ -609,7 +607,7 @@ This is lemma \ref{lemma-cm-strong-effectiveness}.
 
 \medskip\noindent
 Note that $\Lambda$ is a G-ring, see
-More on Algebra, Proposition \ref{more-algebra-proposition-ubiquity-G-ring}.
+\cite[Tag 07PX]{stacks-project}.
 Hence all local rings of $S$ are G-rings. Thus (3) holds and the proof is complete.
 \end{proof}
 \begin{lemma}
@@ -620,5 +618,7 @@ Hence all local rings of $S$ are G-rings. Thus (3) holds and the proof is comple
 \begin{proof}
 	
 \end{proof}
+\bibliographystyle{amsalpha}
+\bibliography{biblio}
 \end{document}
 
