--- a/CMfunctor.tex
+++ b/CMfunctor.tex
@@ -377,8 +377,7 @@ $$
 \CMfunctor_{X/B} \longrightarrow B
 $$
 of sheaves
-(see Lemma \ref{lemma-coherent-stack},
-Algebraic Stacks, Section \ref{algebraic-section-split}, and
+( Algebraic Stacks, Section \ref{algebraic-section-split}, and
 Examples of Stacks, Section
 \ref{examples-stacks-section-stack-associated-to-sheaf}).
 Let $B' \to B$ be a morphism of
@@ -398,10 +397,6 @@ $$
 is fibre product square. This trivial remark
 will occasionally be useful to change the base algebraic space.
 \end{remark}
-\begin{lemma}
-	
-	\label{lemma-sm-stack}
-\end{lemma}
 \begin{lemma}
     In Situation~\ref{situation-cm}, $\CMfunctor_{X/B}$ is limit-preserving.
 	\label{lemma-cm-limits}
@@ -486,11 +481,6 @@ Let $x,y \in \CMfunctor_{X/B}(Y')$ which map to the same object. Then $\alpha(x)
 
 Let $z \in \CMfunctor_{X/B}(Y)\times_{\CMfunctor_{X/B}(Z)} \CMfunctor_{X/B}(Z')$. Represent this in the fiber product by $(z_1,z_2)$, where . Then, as the arrow on the bottom is a bijection, there is a curve $C \to Y'$ mapping to $\beta(z)$. Then there is a unique morphism $C \to X_{Y'} \in G_C(Y')$ restricting to the image of $z_1$ and $z_2$ in $G_{C_1}(Y)$ and $G_{C_2}(Z')$ respectively. Putting these together we find a curve in $\CMfunctor_{X/B}(Y')$ mapping to $z$ and we are done.
 \end{proof}
-
-\begin{lemma}
-	
-	\label{lemma-coherent-stack}
-\end{lemma}
 
 \begin{lemma}
 	For every field $k$ and every $x_0\in \CMfunctor_{X/B}(k)$, $T_{k,x_0}\CMfunctor_{X/B}$ is finite-dimensional.
@@ -667,7 +657,7 @@ To check (2) we have to verify axioms [-1], [0], [1], [2], [3], [4], and [5]
 of Artin's Axioms, Section \ref{artin-section-axioms}.
 We omit the verification of [-1] and axioms
 [0], [1], [2], [3] correspond respectively to
-Lemmas \ref{lemma-sm-stack},
+Lemmas \ref{cm-is-sheaf},
 \ref{lemma-cm-limits},
 \ref{lemma-cm-RS-star},
 \ref{lemma-cm-tangent-space}.
