--- a/CMfunctor.tex
+++ b/CMfunctor.tex
@@ -688,4 +688,8 @@ Hence all local rings of $S$ are G-rings. Thus (3) holds and the proof is comple
 \begin{proof}
 	
 \end{proof}
+
+\end{proof}
+\bibliographystyle{amsalpha}
+\bibliography{biblio}
 \end{document}
